<resources>
    <string name="app_name">Client FTP</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list_connections">Нет сохраненных соединений</string>
    <string name="create">Создать</string>
    <string name="error_get_user_connections">Не удалось получить сохраненые соединения</string>
    <string name="name_connection">Name Connection</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="error_save_connections">Не удалось сохранить соединения</string>
    <string name="new_connection">Новое соединение</string>
    <string name="error_need_host">Нужно заполнить host</string>
    <string name="check_connection">Проверить соединение</string>
    <string name="success">Успешно</string>
    <string name="error">Ошибка</string>
    <string name="error_connection_connect">Ошибка соединения</string>
    <string name="connection_was_delete">Соединение было удалено</string>
    <string name="error_connection_delete">Ошибка удаления соеденения</string>
    <string name="error_connection_cancel_delete">Ошибка отмены удаления</string>

    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="test">Тестировать</string>
    <string name="cancel">Отменить</string>
    <string name="rename">Переименовать</string>
    <string name="move">Переместить</string>
    <string name="upload">Загрузить</string>
    <string name="download">Скачать</string>

    <string name="ftp">FTP</string>
    <string name="file_system">Файловая система</string>

    <string name="internal_storage">Internal Storage</string>

    <string name="title_directory">Директория</string>
    <string name="title_file">Файл</string>

    <string name="file_size_byte">%1$d байт</string>
    <string name="format_date_last_modification">yyyy.MM.dd G \'at\' HH:mm:ss z</string>
</resources>
