<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content"
    android:id="@+id/ll_root">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants" >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_title"
            android:inputType="text"
            android:hint="@string/name_connection"
            android:text="demo.wftpserver.com"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants" >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_host"
            android:inputType="textUri"
            android:hint="@string/host"
            android:text="demo.wftpserver.com"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants" >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:text="demo-user"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants" >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="demo-user"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants" >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_port"
            android:inputType="numberSigned"
            android:hint="@string/port"
            android:text="21"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>